fix: resolve layout issues

--- a/packages/client/src/components/list/index.module.scss
+++ b/packages/client/src/components/list/index.module.scss
@@ -297,3 +297,7 @@
     background: none !important;
   }
 }
+
+.listWrapper {
+  overflow-y: auto;
+}
