--- a/packages/client/src/views/settings/index.module.scss
+++ b/packages/client/src/views/settings/index.module.scss
@@ -1,8 +1,6 @@
-.settings {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
+.settings,
+.view {
+  height: 100%;
 }
 
 .content {
